--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://paste.bashfu.nyc/thing.git"
+    "url": "https://github.com/IKnowBashFu/flextape-js.git"
   },
   "keywords": [
     "flextape",
